+- add a bunch of ppc64 patches, +  limit OF property size to 1Mb, provide vioconfig info, g5 iommu +  freq in cpu info, rtas log_error, vscsi report lun  patches.arch/ibm-ppc64-cpuinfo-freq  patches.arch/ibm-ppc64-g5-iommu  patches.arch/ibm-ppc64-ibmvscsi_do_host_config  patches.arch/ibm-ppc64-limit-of-propsize  patches.arch/ibm-ppc64-log_rtas_error  patches.arch/ibm-ppc64-veth-num_msgs  patches.arch/ibm-ppc64-vioconfig  patches.arch/ibm-ppc64-vscsi-reportlun
suse-commit: 41a651f7f40f11ef5fbaed68570dafb3bf4e40ee

--- a/arch/ppc64/Kconfig
+++ b/arch/ppc64/Kconfig
@@ -210,6 +210,14 @@ config LPARCFG
 	Provide system capacity information via human readable 
 	<key word>=<value> pairs through a /proc/ppc64/lparcfg interface.
 
+config VIOCFG
+	tristate "Virtual I/O Configuration Data"
+	depends on PPC_PSERIES && SCSI_IBMVSCSI
+	help
+	Provide configuration information from a virtual I/O host.
+	Data is in the form
+	<key word>=<value> pairs in /proc/vioconfig.
+
 endmenu
 
 
