- Put patches.suse/xfs-no-qsort in the proper place and disable   jfs-dmapi which accidentally slipped in.
suse-commit: 136229d7b255c6013a2a4174a8740f7614565b87

--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -327,6 +327,7 @@ config FS_POSIX_ACL
 
 config XFS_FS
 	tristate "XFS filesystem support"
+	select QSORT
 	help
 	  XFS is a high performance journaling filesystem which originated
 	  on the SGI IRIX platform.  It is completely multi-threaded, can
