+- update emulex fc driver to lpfcdriver-2.10c
suse-commit: a9db1fcfbf3abf21ea882358411c268c491de8d2

--- a/drivers/scsi/Kconfig
+++ b/drivers/scsi/Kconfig
@@ -1005,13 +1005,12 @@ config SCSI_SYM53C8XX_IOMAPPED
 	  the card.  This is significantly slower then using memory
 	  mapped IO.  Most people should answer N.
 
-config SCSI_LPFCDD
-	tristate "emulex fibrechannel disk"
+config SCSI_LPFC
+	tristate "Emulex LightPulse Fibre Channel Support"
 	depends on PCI && SCSI && (PPC_PSERIES || PPC_ISERIES || IA64 || X86)
-
-config SCSI_LPFNDD
-	tristate "emulex fibrechannel net"
-	depends on PCI && SCSI && (PPC_PSERIES || PPC_ISERIES || IA64 || X86)
+	help
+          This lpfcdd driver supports the Emulex LightPulse
+          Family of Fibre Channel PCI host adapters.
 
 config SCSI_IPR
 	tristate "IBM Power Linux RAID adapter support"
