--- a/drivers/scsi/Makefile
+++ b/drivers/scsi/Makefile
@@ -125,8 +125,7 @@ obj-$(CONFIG_SCSI_SATA_SIL)	+= libata.o sata_sil.o
 obj-$(CONFIG_SCSI_SATA_VIA)	+= libata.o sata_via.o
 obj-$(CONFIG_SCSI_SATA_VITESSE)	+= libata.o sata_vsc.o
 obj-$(CONFIG_SCSI_IBMVSCSI)	+= ibmvscsi/
-obj-$(CONFIG_SCSI_LPFCDD)	+= lpfc/
-obj-$(CONFIG_SCSI_LPFNDD)	+= lpfc/
+obj-$(CONFIG_SCSI_LPFC)	+= lpfc/
 
 obj-$(CONFIG_ARM)		+= arm/
 
