--- a/drivers/scsi/lpfc/Makefile
+++ b/drivers/scsi/lpfc/Makefile
@@ -1,8 +1,4 @@
-
-obj-$(CONFIG_SCSI_LPFCDD) := lpfcdd.o
+obj-$(CONFIG_SCSI_LPFC) := lpfcdd.o
 lpfcdd-objs := lpfc_core.o core.o prod_linux.o lpfcLINUXfcp.o
-
-obj-$(CONFIG_SCSI_LPFNDD) += lpfndd.o
-lpfndd-objs := lpfcLINUXlan.o
 
 EXTRA_CFLAGS += -Idrivers/scsi
