--- a/drivers/net/Makefile
+++ b/drivers/net/Makefile
@@ -183,6 +183,7 @@ obj-$(CONFIG_IBMVETH) += ibmveth.o
 
 obj-$(CONFIG_ARM) += arm/
 obj-$(CONFIG_NET_FC) += fc/
+obj-$(CONFIG_NET_LPFC)	+= lpfc/
 obj-$(CONFIG_DEV_APPLETALK) += appletalk/
 obj-$(CONFIG_TR) += tokenring/
 obj-$(CONFIG_WAN) += wan/
