Enable powernow k8 acpi driver on x86-64 and i386 (#36822)
suse-commit: 07ff088a81144c6e4538c59a77bbf5bb1d628846

--- a/arch/i386/kernel/cpu/cpufreq/Kconfig
+++ b/arch/i386/kernel/cpu/cpufreq/Kconfig
@@ -98,6 +98,17 @@ config X86_POWERNOW_K8
 
 	  If in doubt, say N.
 
+config X86_POWERNOW_K8_ACPI
+	bool "AMD Opteron/Athlon64 PowerNow! using ACPI"
+	depends on CPU_FREQ && EXPERIMENTAL && ACPI && X86_POWERNOW_K8
+	help
+	  This adds the CPUFreq driver for mobile AMD Opteron/Athlon64 processors.
+	  This version uses information from ACPI.
+
+	  For details, take a look at linux/Documentation/cpu-freq. 
+
+	  If in doubt, say N.
+
 config X86_GX_SUSPMOD
 	tristate "Cyrix MediaGX/NatSemi Geode Suspend Modulation"
 	depends on CPU_FREQ
