- lkcd update, disable IPF support until IBM can integrate and   test the fujitsu patch - merge ppc64 support, leave them disabled in series.conf until   the ppc folks can try things out and make sure it compiles
suse-commit: 473217c745cc3c1051b5aa31ed2e8cdfe6cc7ed5

--- a/init/Makefile
+++ b/init/Makefile
@@ -10,7 +10,7 @@ mounts-$(CONFIG_BLK_DEV_INITRD)	+= do_mounts_initrd.o
 mounts-$(CONFIG_BLK_DEV_MD)	+= do_mounts_md.o
 
 extra-$(CONFIG_KERNTYPES)	+= kerntypes.o
-CFLAGS_kerntypes.o		:= -gdwarf-2
+CFLAGS_kerntypes.o		:= -gstabs
 
 # files to be removed upon make clean
 clean-files := ../include/linux/compile.h
