- Fix a build dependency in lkcd (kerntypes.o needs compile.h). - Add missing PreReq entires in kernel-source.spec.in. - Use /etc/init.d instead of /etc/rc.d.
suse-commit: a95490992074f5286e8f3b443708dff5d274eff9

--- a/init/Makefile
+++ b/init/Makefile
@@ -17,7 +17,7 @@ clean-files := ../include/linux/compile.h
 
 # dependencies on generated files need to be listed explicitly
 
-$(obj)/version.o: include/linux/compile.h
+$(obj)/version.o $(obj)/kerntypes.o: include/linux/compile.h
 
 # compile.h changes depending on hostname, generation number, etc,
 # so we regenerate it always.
