--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -4,6 +4,47 @@
 
 menu "File systems"
 
+config XIP2_FS
+	tristate "Execute-in-Place (XIP2) fs support"
+	depends on ARCH_S390
+	help
+	  Cool read-only file system for DCSS.
+
+config XIP2_FS_XATTR
+	bool "XIP2 extended attributes"
+	depends on XIP2_FS
+	help
+	  Extended attributes are name:value pairs associated with inodes by
+	  the kernel or by users (see the attr(5) manual page, or visit
+	  <http://acl.bestbits.at/> for details).
+
+	  If unsure, say N.
+
+config XIP2_FS_POSIX_ACL
+	bool "XIP2 POSIX Access Control Lists"
+	depends on XIP2_FS_XATTR
+	help
+	  Posix Access Control Lists (ACLs) support permissions for users and
+	  groups beyond the owner/group/world scheme.
+
+	  To learn more about Access Control Lists, visit the Posix ACLs for
+	  Linux website <http://acl.bestbits.at/>.
+
+	  If you don't know what Access Control Lists are, say N
+
+config XIP2_FS_SECURITY
+	bool "XIP2 Security Labels"
+	depends on XIP2_FS_XATTR
+	help
+	  Security labels support alternative access control models
+	  implemented by security modules like SELinux.  This option
+	  enables an extended attribute handler for file security
+	  labels in the ext2 filesystem.
+
+	  If you are not using a security module that requires using
+	  extended attributes for file security labels, say N.
+
+
 config EXT2_FS
 	tristate "Second extended fs support"
 	help
@@ -189,9 +230,9 @@ config JBD_DEBUG
 config FS_MBCACHE
 # Meta block cache for Extended Attributes (ext2/ext3)
 	tristate
-	depends on EXT2_FS_XATTR || EXT3_FS_XATTR
-	default y if EXT2_FS=y || EXT3_FS=y
-	default m if EXT2_FS=m || EXT3_FS=m
+	depends on EXT2_FS_XATTR || EXT3_FS_XATTR || XIP2_FS_XATTR
+	default y if EXT2_FS=y || EXT3_FS=y || XIP2_FS=y
+	default m if EXT2_FS=m || EXT3_FS=m || XIP2_FS=m
 
 config REISERFS_FS
 	tristate "Reiserfs support"
@@ -322,7 +363,8 @@ config FS_POSIX_ACL
 # 	Never use this symbol for ifdefs.
 #
 	bool
-	depends on EXT2_FS_POSIX_ACL || EXT3_FS_POSIX_ACL || JFS_POSIX_ACL || REISERFS_FS_POSIX_ACL
+	depends on EXT2_FS_POSIX_ACL || EXT3_FS_POSIX_ACL || JFS_POSIX_ACL \
+		|| REISERFS_FS_POSIX_ACL || XIP2_FS_POSIX_ACL
 	default y
 
 config XFS_FS
