- S/390: Update to IBM Codedrop 2004/04/15 - S/390: Removed obsolete patches - Rediffed patches.suse/lkcd-kernel-changes-linux263.patch,   patches.fixes/anon-vma to apply again.
suse-commit: 2f226c13a087422afd510277f49323c62eee03e8

--- a/arch/s390/Makefile
+++ b/arch/s390/Makefile
@@ -52,12 +52,12 @@ drivers-$(CONFIG_MATHEMU) += arch/$(ARCH)/math-emu/
 
 boot		:= arch/$(ARCH)/boot
 
-all: image
+all: image kerntypes.o
 
 install: vmlinux
 	$(Q)$(MAKE) $(build)=$(boot) $@
 
-image: vmlinux
+image kerntypes.o: vmlinux
 	$(Q)$(MAKE) $(build)=$(boot) $(boot)/$@
 
 archclean:
