- S/390: Rename qeth module to qeth_mod for compability with   old versions.
suse-commit: 63b8625bf86156f8d2c4da5eee2041398414e267

--- a/drivers/s390/net/Makefile
+++ b/drivers/s390/net/Makefile
@@ -11,4 +11,4 @@ obj-$(CONFIG_CTC) += ctc.o fsm.o cu3088.o
 obj-$(CONFIG_LCS) += lcs.o cu3088.o
 qeth-y := qeth_main.o qeth_mpc.o qeth_sys.o
 qeth-$(CONFIG_PROC_FS) += qeth_proc.o
-obj-$(CONFIG_QETH) += qeth.o
+obj-$(CONFIG_QETH) += qeth_mod.o
