+- add patches.drivers/icadd-2.6-0.23.3.patch (#37425) +  ftp://www-126.ibm.com/pub/icadd/icadd-2.6-0.23/
suse-commit: eb10d3c4197f14af0189d9ec4e740fac2b7a46e8

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -20,6 +20,7 @@ obj-$(CONFIG_PARPORT)		+= parport/
 obj-y				+= base/ block/ misc/ net/ media/
 obj-$(CONFIG_NUBUS)		+= nubus/
 obj-$(CONFIG_ATM)		+= atm/
+obj-$(CONFIG_IBM_CRYPTO)	+= ibmcrypto/
 obj-$(CONFIG_PPC_PMAC)		+= macintosh/
 obj-$(CONFIG_IDE)		+= ide/
 obj-$(CONFIG_FC4)		+= fc4/
