--- a/arch/ppc/Kconfig
+++ b/arch/ppc/Kconfig
@@ -1229,6 +1229,8 @@ endmenu
 
 source "security/Kconfig"
 
+source "drivers/ibmcrypto/Kconfig"
+
 source "crypto/Kconfig"
 
 source "rpmify/Kconfig"
