Add driver for Intel Multimedia Timer [#38873].
suse-commit: 9742de40a9b9701c64cd908e81914073096c7bc2

--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -1008,6 +1008,14 @@ config HANGCHECK_TIMER
 	  out to lunch past a certain margin.  It can reboot the system
 	  or merely print a warning.
 
+config MMTIMER
+	tristate "Memory mapped RTC"
+	depends on IA64_GENERIC || IA64_SGI_SN2
+	default y
+	help
+	  The mmtimer device memory gives userspace access to the
+	  Altix realtime clock.
+
 endmenu
 
 source "drivers/char/lirc/Kconfig"
