--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -375,7 +375,7 @@ config AU1000_UART
 
 config SGI_L1_SERIAL
 	bool "SGI Altix L1 serial support"
-	depends on SERIAL_NONSTANDARD && IA64
+	depends on SERIAL_NONSTANDARD && (IA64_GENERIC || IA64_SGI_SN2)
 	help
 	  If you have an SGI Altix and you want to use the serial port
 	  connected to the system controller (you want this!), say Y.
@@ -390,9 +390,9 @@ config SGI_L1_SERIAL_CONSOLE
 	  say Y.  Otherwise, say N.
 
 config FETCHOP
-	bool "SGI Altix small TLB memory mapping support"
-	depends on IA64
-	default y if IA64
+	tristate "SGI Altix small TLB memory mapping support"
+	depends on IA64_GENERIC || IA64_SGI_SN2
+	default y
 	help
 	  Support small TLB entry memory mapping for special uncached
 	  operations that can operate without interference from
@@ -400,7 +400,7 @@ config FETCHOP
 
 config SGI_IOC4_SERIAL
 	tristate "SGI Altix ioc4 serial support"
-	depends on SERIAL_NONSTANDARD && IA64
+	depends on SERIAL_NONSTANDARD && (IA64_GENERIC || IA64_SGI_SN2)
 	help
 	  If you have an SGI Altix and you would like to use the ioc4
 	  serial ports, say M.  Otherwise, say N.
