- Merged patches for vsyscall-gettimeofday
suse-commit: 303915c85e49d575d8f7c78b050d77b6466460fa

--- a/arch/i386/Kconfig
+++ b/arch/i386/Kconfig
@@ -432,6 +432,10 @@ config HPET_TIMER
 config HPET_EMULATE_RTC
 	def_bool HPET_TIMER && RTC=y
 
+config VSYSCALL_GTOD
+	depends on EXPERIMENTAL
+	bool "VSYSCALL gettimeofday() interface"
+
 config SMP
 	bool "Symmetric multi-processing support"
 	---help---
