--- a/drivers/scsi/Kconfig
+++ b/drivers/scsi/Kconfig
@@ -1012,7 +1012,7 @@ config SCSI_LPFC
 config SCSI_IPR
 	tristate "IBM Power Linux RAID adapter support"
 	depends on PCI && SCSI
-	enable FW_LOADER
+	select FW_LOADER
 	---help---
 	  This driver supports the IBM Power Linux family RAID adapters.
 	  This includes IBM pSeries 5712, 5703, 5709, and 570A, as well
