update megaraid driver to version v2.20.0.B2.04.27.2004
suse-commit: 26b0250d1ce1eb84bd273a8d416bed4c9d27c6cb

--- a/drivers/scsi/Makefile
+++ b/drivers/scsi/Makefile
@@ -95,7 +95,9 @@ obj-$(CONFIG_SCSI_IBMMCA)	+= ibmmca.o
 obj-$(CONFIG_SCSI_EATA)		+= eata.o
 obj-$(CONFIG_SCSI_DC395x)	+= dc395x.o
 obj-$(CONFIG_SCSI_DC390T)	+= tmscsim.o
-obj-$(CONFIG_SCSI_MEGARAID)	+= megaraid.o
+obj-$(CONFIG_MEGARAID_MM)	+= megaraid_mm.o
+obj-$(CONFIG_MEGARAID_MAILBOX)	+= megaraid.o
+megaraid-objs			+= megaraid_mbox.o megaraid_clib.o
 obj-$(CONFIG_SCSI_ACARD)	+= atp870u.o
 obj-$(CONFIG_SCSI_SUNESP)	+= esp.o
 obj-$(CONFIG_SCSI_GDTH)		+= gdth.o
