--- a/arch/ppc64/Kconfig
+++ b/arch/ppc64/Kconfig
@@ -40,12 +40,13 @@ config FRAME_POINTER
 	bool
 	default y
 
-# We optimistically allocate largepages from the VM, so make the limit
-# large enough (16MB). This badly named config option is actually
-# max order + 1
+# This badly named config option is actually max order + 1. This limits
+# the largest allocation we can do with get_free_pages. In order to make
+# the dentry and inode hashes big enough on machines with massive filesystems
+# we keep this quite high (1GB)
 config FORCE_MAX_ZONEORDER
 	int
-	default "13"
+	default "19"
 
 source "init/Kconfig"
 
