ckrm update to e12
suse-commit: 5d8d82e9ce74184c5e66878c0a50a7a2e2bd6198

--- a/fs/rcfs/Makefile
+++ b/fs/rcfs/Makefile
@@ -4,4 +4,7 @@
 
 obj-$(CONFIG_RCFS_FS) += rcfs.o
 
-rcfs-objs := super.o inode.o dir.o file.o magic_shares.o magic_stats.o magic_target.o magic_config.o magic_members.o
+rcfs-objs := super.o inode.o dir.o rootdir.o magic.o tc_magic.o socket_fs.o 
+
+rcfs-objs-$(CONFIG_CKRM_TYPE_TASKCLASS) += tc_magic.o
+rcfs-objs-$(CONFIG_CKRM_TYPE_SOCKETCLASS) += socket_fs.o
