--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -6,7 +6,7 @@ menu "Misc devices"
 
 config IBM_ASM
 	tristate "Device driver for IBM RSA service processor"
-	depends on X86
+	depends on X86 && EXPERIMENTAL
 	default n
 	---help---
 	  This option enables device driver support for in-band access to the
@@ -17,6 +17,12 @@ config IBM_ASM
 	  a user space API.
 	  The ibmasm driver also enables the OS to use the UART on the
           service processor board as a regular serial port.
+
+	  WARNING: This software may not be supported or function 
+	  correctly on your IBM server. Please consult the IBM ServerProven
+	  website http://www.pc.ibm/ww/eserver/xseries/serverproven for
+	  information on the specific driver level and support statement
+	  for your IBM server.
 	  
 
 	  If unsure, say N.
