Adding LAuS for s390 and s390x
suse-commit: 0b9763767e74e83bf64a7e0bff4c0ae5c420d2ec

--- a/arch/s390/Kconfig
+++ b/arch/s390/Kconfig
@@ -360,6 +360,8 @@ config PCMCIA
 
 source "drivers/base/Kconfig"
 
+source "drivers/audit/Kconfig"
+
 source "drivers/scsi/Kconfig"
 
 source "drivers/s390/Kconfig"
