Fix infiniband undefined symbols on x86-64
suse-commit: d0dad3fdb31116fcca65ea2c96f1a29d9eecb561

--- a/drivers/infiniband/hw/mellanox-hca/vipkl/Makefile
+++ b/drivers/infiniband/hw/mellanox-hca/vipkl/Makefile
@@ -33,4 +33,6 @@ mod_vipkl-objs := \
     vipkl_mod_obj.o \
     VIP_rsct.o \
     vipkl_wrap_kernel.o \
-    vipklsyms.o
+    vipklsyms.o \
+    mt_bufpool.o
+
