+- add patches.suse/lkcd-kerntypes.ppc64.patch (#40019 - LTC8198)
suse-commit: b1f531d59052d6976a92b66bcf1354b5d8f8249c

--- a/arch/ppc64/Kconfig
+++ b/arch/ppc64/Kconfig
@@ -354,6 +354,11 @@ source "arch/ppc64/oprofile/Kconfig"
 
 menu "Kernel hacking"
 
+config KERNTYPES
+	bool
+	depends on CRASH_DUMP
+	default y
+
 config CRASH_DUMP
 	tristate "Crash dump support"
 	default n
