--- a/arch/ppc64/Kconfig
+++ b/arch/ppc64/Kconfig
@@ -460,21 +460,30 @@ config DEBUGGER
 	  Include in-kernel hooks for kernel debuggers. Unless you are
 	  intending to debug the kernel, say N here.
 
-choice
-	optional
-	depends on DEBUGGER
-	prompt "Kernel Debugger"
-
 config XMON
-	bool "XMON"
+	bool "Include xmon kernel debugger"
+	depends on DEBUGGER
 	help
-	  Include in-kernel hooks for the xmon kernel monitor/debugger.
+	  Include the xmon kernel monitor/debugger.
 	  Unless you are intending to debug the kernel, say N here.
+
+config XMON_DEFAULT
+	bool "Enable xmon kernel debugger by default"
+	depends on XMON
+	help
+	  If you say Y here, the system will invoke xmon when a serious
+	  error occurs.  If you say N, xmon will be included in the
+	  kernel but will not be entered when a serious error occurs -
+	  instead the kernel will print an oops message.  Xmon can be
+	  activated by doing "echo 1 >/proc/sys/kernel/xmon" as root,
+	  by pressing alt-sysrq-x, or by giving the xmon=on or xmon=force
+	  boot command line options.  If in doubt say N.
 
 config KDB
 	bool "KDB"
+	depends on DEBUGGER
 	help
-	  Include in-kernel hooks for the kdb kernel monitor/debugger.
+	  Include the kdb kernel monitor/debugger.
 	  Unless you are intending to debug the kernel, say N here.
 
 config KDB_MODULES
@@ -484,13 +493,6 @@ config KDB_MODULES
 	  Include additional KDB support for viewing buffer heads,
 	  pages, inodes, dentrys, vm areas and scsi devices and
 	  scsi commands.
-
-endchoice
-
-
-config XMON_DEFAULT
-	bool "Enable xmon by default"
-	depends on XMON
 
 config KDB_OFF
 	bool "Turn KDB off as default."
