+- add patches.fixes/e100-napi-pseries +  EEH and NAPI do not play well together (#38183 - LTC7201)
suse-commit: 19f83e0708c34cc292482c5e0c09f83740feed98

--- a/drivers/net/Kconfig
+++ b/drivers/net/Kconfig
@@ -1431,7 +1431,7 @@ config E100
 
 config E100_NAPI
 	bool "Use Rx Polling (NAPI)"
-	depends on E100
+	depends on E100 && !PPC_PSERIES
 
 config LNE390
 	tristate "Mylex EISA LNE390A/B support (EXPERIMENTAL)"
