--- a/scripts/Makefile.modinst
+++ b/scripts/Makefile.modinst
@@ -12,10 +12,6 @@ include scripts/Makefile.lib
 __modules := $(shell head -q -n1 /dev/null $(wildcard $(MODVERDIR)/*.mod))
 modules := $(patsubst %.o,%.ko,$(wildcard $(__modules:.ko=.o)))
 
-ifneq ($(filter-out $(modules),$(__modules)),)
-  $(warning *** Uh-oh, you have stale module entries. You messed with SUBDIRS, do not complain if something goes wrong.)
-endif
-
 .PHONY: $(modules)
 __modinst: $(modules)
 	@:
@@ -29,11 +25,10 @@ quiet_cmd_modules_install = INSTALL $@
 $(filter-out ../% /%,$(modules)):
 	$(call cmd,modules_install)
 
-# Modules built outside go into extra by default
-
+# Modules built outside just go into extra by default
 MOD_DIR ?= extra
 
-quiet_cmd_modules_install_extra = INSTALL $(@F)
+quiet_cmd_modules_install_extra = INSTALL $(obj-m:.o=.ko)
       cmd_modules_install_extra = mkdir -p $(MODLIB)/$(MOD_DIR); \
 			    	  cp $@ $(MODLIB)/$(MOD_DIR)
 
