- fix uml build failure.
suse-commit: 63afdfb4c4544ede06a9d20ae7dc989e114e7e79

--- a/arch/um/util/Makefile
+++ b/arch/um/util/Makefile
@@ -4,5 +4,5 @@ always			:= $(host-progs)
 mk_task-objs		:= mk_task_user.o mk_task_kern.o
 mk_constants-objs	:= mk_constants_user.o mk_constants_kern.o
 
-HOSTCFLAGS_mk_task_kern.o	:= $(CFLAGS)
-HOSTCFLAGS_mk_constants_kern.o	:= $(CFLAGS)
+HOSTCFLAGS_mk_task_kern.o	:= $(CPPFLAGS) $(CFLAGS)
+HOSTCFLAGS_mk_constants_kern.o	:= $(CPPFLAGS) $(CFLAGS)
