--- a/arch/um/sys-i386/util/Makefile
+++ b/arch/um/sys-i386/util/Makefile
@@ -3,7 +3,7 @@ always		:= $(host-progs)
 
 mk_thread-objs	:= mk_thread_kern.o mk_thread_user.o
 
-HOSTCFLAGS_mk_thread_kern.o	:= $(CFLAGS)
+HOSTCFLAGS_mk_thread_kern.o	:= $(CPPFLAGS) $(CFLAGS)
 HOSTCFLAGS_mk_thread_user.o	:= $(USER_CFLAGS)
 
 clean :
