- Add supported flag for modules. The file supported.conf lists   all modules, and marks unsupported modules as in series.conf.   Loading an unsupported module taints the kernel.
suse-commit: 8c96cb334810a63039cee5d43b3d2f9517c12b7c

--- a/scripts/Makefile.modpost
+++ b/scripts/Makefile.modpost
@@ -52,6 +52,7 @@ _modpost: $(modules)
 quiet_cmd_modpost = MODPOST
       cmd_modpost = scripts/modpost \
 	$(if $(KBUILD_EXTMOD),-i,-o) $(symverfile) \
+	-s $(objtree)/Module.supported \
 	$(filter-out FORCE,$^)
 
 .PHONY: __modpost
